<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ligthBlue"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/login"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:autofillHints="password"
            android:background="@color/white"
            android:hint="@string/senha"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_weight="2"
            android:backgroundTint="@color/Green"
            android:text="@string/ButtonLogin" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Blue"
            android:text="@string/inscreve_se" />
    </LinearLayout>

</LinearLayout>